--- a/monoQuiz/package.json
+++ b/monoQuiz/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^1.11.0",
+    "gsap": "^3.14.2",
     "oh-vue-icons": "^1.0.0-rc3",
     "sass": "^1.97.2",
     "vue": "^3.5.26",
